# idepus

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  aicery.yaml.example  index.html  package-lock.json  package.json  setup.sh
.cargo/: config.toml
.github/workflows/: ci.yml  release.yml
crates/idepus-context/: Cargo.toml
crates/idepus-diff/: Cargo.toml
crates/idepus-diff/benches/: parse_bench.rs
crates/idepus-diff/src/: apply.rs  error.rs  lib.rs  parser.rs  protected.rs  types.rs
crates/idepus-indexer/: Cargo.toml
crates/idepus-llm/: Cargo.toml
crates/idepus-llm/src/: credentials.rs  error.rs  lib.rs  mock.rs  prompt.rs  provider.rs  registry.rs  retry.rs  types.rs
crates/idepus-llm/src/providers/: anthropic.rs  mod.rs  ollama.rs  openai.rs
crates/idepus-plugin-api/: Cargo.toml
crates/idepus-plugin-gitignore/: Cargo.toml
deploy/: aicery.compose.override.yml
docs/: ai-workflow.md  aicery-setup.md  architecture.md  idepus-context.md  plugins.md
examples/: .idepus-context  ai-workflow.yaml
idepus-plugin/agents/: code-editor.yaml  code-explorer.yaml  explore-planner.yaml  graph.py  lint-fix.yaml  multi-file-editor.yaml  path_hints.py
idepus-plugin/tests/: test_path_hints.py  test_research_node.py
idepus-plugin/tools/: _bridge.py  apply_patch.py  create_file.py  (+10 more)
scripts/: aicery-reload-provider.sh  aicery-sidecar-stub.sh  aicery-smoke.sh  aicery-up.sh  build-sidecar-stub.sh  drift-check.sh  perf-cold-start.sh  perf-file-tree.mjs
src/: app.ts  editor-editable.ts  editor.ts  main.ts  styles.css
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/benches/: shadow_bench.rs
src-tauri/binaries/: aicery-x86_64-unknown-linux-gnu
src-tauri/capabilities/: default.json
src-tauri/src/: error.rs  lib.rs  main.rs
src-tauri/src/autocomplete/: config.rs  context.rs  mock.rs  mod.rs  ollama.rs
src-tauri/src/bridge/: executor.rs  jail.rs  mod.rs  search_stub.rs  tool_server.rs
src-tauri/src/commands/: aicery.rs  autocomplete.rs  chat_sessions.rs  config.rs  diff.rs  file.rs  fs_ops.rs  index.rs  llm.rs  memory.rs  mod.rs  plan.rs  research.rs  session.rs  shadow.rs  telemetry.rs  terminal.rs  workspace.rs
src-tauri/src/config/: mod.rs  team_context.rs  workflow.rs
src-tauri/src/llm/: bridge.rs  mod.rs  registry.rs
src-tauri/src/plugins/: host.rs  mod.rs
src-tauri/src/research/: config.rs  fetch.rs  mock.rs  mod.rs  provider.rs  tavily.rs
src-tauri/src/shadow/: apply.rs  mod.rs  prepare.rs  types.rs
src-tauri/src/sidecar/: health.rs  lifecycle.rs  manager.rs  mod.rs
src-tauri/src/terminal/: buffer.rs  mod.rs  patterns.rs  runner.rs  session.rs  types.rs
src-tauri/src/workspace/: grep.rs  ignore.rs  list.rs  mod.rs  recent.rs  self_write.rs  state.rs  types.rs  watcher.rs
(+149 files in other folders)
