[package]
name = "idepus-diff"
version = "0.1.0"
edition = "2021"
description = "SEARCH/REPLACE patch parser and apply for idepus"

[dependencies]
regex = "1"
serde = { version = "1", features = ["derive"] }
thiserror = "2"
uuid = { version = "1", features = ["v4"] }
idepus-context = { path = "../idepus-context" }

[dev-dependencies]
proptest = "1"
criterion = "0.5"

[[bench]]
name = "parse_bench"
harness = false
