[package]
name = "idepus-llm"
version = "0.1.0"
edition = "2021"
description = "Model-agnostic LLM provider layer for idepus"

[dependencies]
async-trait = "0.1"
futures = "0.3"
keyring = { version = "3", features = ["linux-native", "linux-native-sync-persistent"] }
reqwest = { version = "0.12", features = ["json", "stream"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["sync", "time", "rt-multi-thread", "macros"] }
tokio-stream = "0.1"

[dev-dependencies]
tokio = { version = "1", features = ["sync", "time", "rt-multi-thread", "macros", "test-util"] }
